--- a/easycontrol/app/src/main/AndroidManifest.xml
+++ b/easycontrol/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".BydActivity"
+            android:name=".LayoutConfigActivity"
             android:configChanges="keyboardHidden|screenSize|orientation"
             android:exported="true"
             android:screenOrientation="landscape">
@@ -69,8 +69,6 @@
             android:exported="true"
             android:hardwareAccelerated="true"
             android:theme="@style/Transparent" />
-
-
     </application>
 
 </manifest>
